# pg_neon_ai

./: .gitattributes  Cargo.toml  README.md  neon_ai.control
jina_reranker_v1_tiny_en/: config.json  model.onnx
jina_reranker_v1_turbo_en/: config.json  model.onnx
src/: lib.rs  lib.sql
