[package]
name = "neon_ai"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
fastembed = "3.10.0"
htmd = "0.1.6"
lopdf = "0.32.0"
pdf-extract = "0.7.7"
pgrx = "0.11.3"
serde_json = "1.0.120"
text-splitter = { version = "0.14.1", features = ["tokenizers"] }
tokenizers = "0.19.1"
ureq = { version = "2.9.7", features = ["json"] }

[dev-dependencies]
pgrx-tests = "0.11.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
